--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -311,7 +311,7 @@ min-height:100px;
 }
 
 h1#total-leve {
-	font-size : 52px;
+/* 	font-size : 52px; */
 	position : absolute;
 	width : 370px;
 	margin-left :35px;
