--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,11 @@
 						<div class="row tuile" id="color-1">
 							<div class="chart-title"><h4>T O T A L &nbsp;&nbsp; R A I S E D</h4></div>
 							<div class="chart" id="montant-leve"><h1 id="total-leve">€<span class="number-display">_</span> MILLION </h1></div>
+														<script>
+							var text_width = ($(window).width() > 1270) ? "52px" : "44px" ;
+							
+							$("h1#total-leve").css("font-size", text_width) ;
+							</script>
 						</div>
 						<div class="row tuile" id="color-2">
 							<div class="chart-title"><h4>Y E A R L Y &nbsp; F U N D I N G S &nbsp;( € M )</h4></div>
