--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,14 +73,6 @@
 						<div class="row tuile" id="color-1">
 							<div class="chart-title"><h4>T O T A L &nbsp;&nbsp; R A I S E D</h4></div>
 							<div class="chart" id="montant-leve"><h1 id="total-leve">€<span class="number-display">_</span> MILLION </h1></div>
-							<script>
-							if ($(window).width() > 1270) { var text_width = "52px" }
-							else if ($(window).width() > 1140) { var text_width = "47px" }
-							else if ($(window).width() > 992) { var text_width = "40px" }
-							else if ($(window).width() < 993) { var text_width = "52px" }
-							
-							$("h1#total-leve").css("font-size", text_width) ;
-							</script>
 						</div>
 						<div class="row tuile" id="color-2">
 							<div class="chart-title"><h4>F U N D I N G S &nbsp;( € M )</h4></div>
@@ -113,7 +105,7 @@
 							 <div class="chart" id="FF"></div>
 						</div>
 						<div class="row tuile" id="color-6">
-							 <div class="chart-title"><h4>Y E A R L Y &nbsp;&nbsp; I N C E P T I O N S</h4></div>
+							 <div class="chart-title"><h4>C R E A T I O N S</h4></div>
 							 <div id="inceptionBarChart" class="chart"></div>
 						</div>
 					</div>
@@ -161,6 +153,17 @@
 							</div>
 					  </div>
 				</section>
+							<script>
+							if ($(window).width() > 1270) { var text_width = "52px" ; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; }
+							else if ($(window).width() > 1140) { var text_width = "47px"; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; }
+							else if ($(window).width() > 976) { var text_width = "40px"; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; }
+							else if ($(window).width() < 977) { var text_width = "52px"; var bt_margin = 100 * (($(window).width() - 210) / 2) / ($(window).width()) ; var ff_margin = 100 * (($(window).width() - 400) / 2) / ($(window).width() ) ; }
+							
+							$("#businessModelPieChart").css("left", Math.round(bt_margin) + "%");
+							$('#FF').css("left", Math.round(ff_margin) + "%");
+							$("h1#total-leve").css("font-size", text_width);
+							
+							</script>
 				<section class="about" id="about">
 					<footer>
 						<div class="row" id="footer">
