Modifs style et responsive

--- a/app/static/css/lib/bootstrap.css
+++ b/app/static/css/lib/bootstrap.css
@@ -5820,18 +5820,24 @@ button.close {
     width: 900px;
   }
 }
+
 .tooltip {
   position: absolute;
+  top : 5px;
+  right : 10px;
   z-index: 1070;
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
   font-size: 12px;
-  font-weight: normal;
+  font-weight: lighter;
   line-height: 1.4;
   visibility: visible;
+/* 
   filter: alpha(opacity=0);
-  opacity: 0;
+ */
+/*   opacity: 0; */
 }
+
 .tooltip.in {
   filter: alpha(opacity=90);
   opacity: .9;
@@ -5861,6 +5867,7 @@ button.close {
   background-color: #000;
   border-radius: 4px;
 }
+/* 
 .tooltip-arrow {
   position: absolute;
   width: 0;
@@ -5868,6 +5875,7 @@ button.close {
   border-color: transparent;
   border-style: solid;
 }
+ */
 .tooltip.top .tooltip-arrow {
   bottom: 0;
   left: 50%;
@@ -5924,6 +5932,7 @@ button.close {
   border-width: 0 5px 5px;
   border-bottom-color: #000;
 }
+ */
 .popover {
   position: absolute;
   top: 0;
