--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,8 +15,10 @@
  	<script src="/static/js/lib/bootstrap.js" type="text/javascript"></script>
  	
 <!--  	Ne pas oublier les 2 suivants si inutiles    -->
+<!-- 
  	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
  	<script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
+ -->
 <!--  	////////////////////////////////////////////// -->
  	
  	<link href="/static/css/lib/dc.css" rel="stylesheet"/>
@@ -29,7 +31,7 @@
 	
  	<link href="/static/css/style.css" rel="stylesheet"/>
  	
-    <title>The French Fintech index</title>
+    <title>The French Fintech Index</title>
     
     <link rel="icon" 
       type="image/png" 
@@ -50,7 +52,7 @@
 			  <span class="icon-bar"></span>
 			  </button>
 			  <a class="navbar-brand FrenchFinTech" style="letter-spacing:2px;font-weight:normal" href="#">
-				The French Fintech index
+				The French Fintech Index
 			  </a>
 			  </div>
 			  
@@ -71,23 +73,33 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="row tuile" id="color-1">
-							<div class="chart-title"><h4>T O T A L &nbsp;&nbsp; R A I S E D</h4></div>
-							<div class="chart" id="montant-leve"><h1 id="total-leve">€<span class="number-display">_</span> MILLION </h1></div>
+							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H </h4></div>
+							 <a href="#" data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Click on the logo to filter members of Francefintech exclusively">
+    							<img class="info-logo" src="/static/image/info.png" />
+							 </a>
+							 <div class="chart" id="FF"></div>
 						</div>
 						<div class="row tuile" id="color-2">
-							<div class="chart-title"><h4>F U N D I N G S &nbsp;( € M )</h4></div>
-							<div id="fundsBarChart" class="chart">
-							  
-							</div>
+							 <div class="chart-title"><h4>C R E A T I O N S</h4></div>
+							 <a href="#" data-toggle="tooltip" style="top : 155px;" class="tooltip" data-placement="bottom" title="Select a time span to filter Fintech startups created during that period">
+    							<img class="info-logo" src="/static/image/info.png" />
+							 </a>
+							 <div id="inceptionBarChart" class="chart"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="row tuile" id="color-3">
 							 <div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; T Y P E</h4></div>
+							 <a href="#" data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Filter by business types">
+    							<img class="info-logo" src="/static/image/info.png" />
+							 </a>
 							 <div id="businessModelPieChart" class="chart"></div>
 						</div>
 						<div class="row tuile" id="color-4">
 							 <div class="chart-title"><h4>C A T E G O R Y</h4></div>
+							 <a href="#" data-toggle="tooltip" style="top:285px;" class="tooltip" data-placement="bottom" title="Filter by category of Fintech startup">
+    							<img class="info-logo" src="/static/image/info.png" />
+							 </a>
 							 <div id="categoryRowChart" class="chart">
 <!-- 
 							      <a
@@ -101,12 +113,18 @@
 					</div>
 					<div class="col-md-4">
 						<div class="row" id="color-5">
-							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H </h4></div>
-							 <div class="chart" id="FF"></div>
+							<div class="chart-title"><h4>T O T A L &nbsp;&nbsp; R A I S E D</h4></div>
+							 <a href="#" data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Here is the total amount of money raised by the filtered startups">
+    							<img class="info-logo" src="/static/image/info.png" />
+							 </a>
+							<div class="chart" id="montant-leve"><h1 id="total-leve">€<span class="number-display">_</span> MILLION </h1></div>
 						</div>
 						<div class="row tuile" id="color-6">
-							 <div class="chart-title"><h4>C R E A T I O N S</h4></div>
-							 <div id="inceptionBarChart" class="chart"></div>
+							<div class="chart-title"><h4>F U N D I N G S &nbsp;( € M )</h4></div>
+							 <a href="#" data-toggle="tooltip" style="top : 130px;" class="tooltip" data-placement="bottom" title="Select a time span to filter startups that have raised during that period">
+    							<img class="info-logo" src="/static/image/info.png" />
+							 </a>
+							<div id="fundsBarChart" class="chart"></div>
 						</div>
 					</div>
 				</div>
@@ -122,14 +140,14 @@
 							  		<div class="modal-content">
 										<div class="modal-body">
 											<button type="button" class="close" data-dismiss="modal"><img class="svg-cross" src="/static/image/whitecross.svg"></button>
-								  			<div class="container-logo">	
-								  				<a class="modal-websitelink"><img class="modal-logo"></a>
-								  			</div>
 								  			<h4 class="modal-company modal-titre"></h4>
 								  			<h4 class="modal-abstract modal-txt"></h4>
 								  			<div class="modal-padding">
 								  				<a class="modal-FF" href="http://www.francefintech.org/"><img class="FF-mini" src="http://blog.bolden.fr/wp-content/uploads/2015/07/france-fintech.png"></a>
 								  				<a class="modal-linkedin"><img src="/static/image/In-2CRev-21px-R.png" class="linkedin-logo"></a>
+								  			<div class="container-logo">	
+								  				<a class="modal-websitelink"><img class="modal-logo"></a>
+								  			</div>
 								  				<h4 class="modal-FFmembership modal-txt"></h4>
 								  				<h4 class="modal-creation modal-txt"></h4>
 								  				<h4 class="modal-CEO modal-txt"></h4>
@@ -137,7 +155,7 @@
 								  				<h4 class="modal-category modal-txt"></h4>
 								  				<h4 class="modal-BM modal-txt"></h4>
 								  				<h4 class="modal-headquarters modal-txt"></h4>
-								  				<h4 class="modal-website modal-txt"></h4>
+<!-- 								  				<h4 class="modal-website modal-txt"></h4> -->
 								  				<h4 class="modal-round1 modal-txt"></h4>
 								  				<h4 class="modal-round2 modal-txt"></h4>
 								  				<h4 class="modal-round3 modal-txt"></h4>
@@ -168,7 +186,7 @@
 					<footer>
 						<div class="row" id="footer">
 							    <div class="col-md-8" style="height:50px;">
-	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;For&nbsp;<a style="color:black;text-decoration:underline" href="https://www.twitter.com/the_assets">The Assets</a> </h4>
+	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;for&nbsp;<a style="color:black;text-decoration:underline" href="https://www.twitter.com/the_assets">The Assets</a> </h4>
 							    </div>
 <!--							    <div class="col-md-2" style="height:50px;">
  
@@ -194,6 +212,11 @@
    	
    	
    	<script>
+   	
+	$(document).ready(function(){
+    	$('[data-toggle="tooltip"]').tooltip(); 
+	});
+
    	
    $(".navbar-collapse ul li a[href^='#']").on('click', function(e) {
 
