modifs href logo info

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,14 +74,14 @@
 					<div class="col-md-4">
 						<div class="row tuile" id="color-1">
 							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H </h4></div>
-							 <a href="#" data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Click on the logo to filter members of Francefintech exclusively">
+							 <a data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Click on the logo to filter members of Francefintech exclusively">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							 <div class="chart" id="FF"></div>
 						</div>
 						<div class="row tuile" id="color-2">
 							 <div class="chart-title"><h4>C R E A T I O N S</h4></div>
-							 <a href="#" data-toggle="tooltip" style="top : 155px;" class="tooltip" data-placement="bottom" title="Select a time span to filter Fintech startups created during that period">
+							 <a data-toggle="tooltip" style="top : 155px;" class="tooltip" data-placement="bottom" title="Select a time span to filter Fintech startups created during that period">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							 <div id="inceptionBarChart" class="chart"></div>
@@ -90,14 +90,14 @@
 					<div class="col-md-4">
 						<div class="row tuile" id="color-3">
 							 <div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; T Y P E</h4></div>
-							 <a href="#" data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Filter by business types">
+							 <a data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Filter by business types">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							 <div id="businessModelPieChart" class="chart"></div>
 						</div>
 						<div class="row tuile" id="color-4">
 							 <div class="chart-title"><h4>C A T E G O R Y</h4></div>
-							 <a href="#" data-toggle="tooltip" style="top:285px;" class="tooltip" data-placement="bottom" title="Filter by category of Fintech startup">
+							 <a data-toggle="tooltip" style="top:285px;" class="tooltip" data-placement="bottom" title="Filter by category of Fintech startup">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							 <div id="categoryRowChart" class="chart">
@@ -114,14 +114,14 @@
 					<div class="col-md-4">
 						<div class="row" id="color-5">
 							<div class="chart-title"><h4>T O T A L &nbsp;&nbsp; R A I S E D</h4></div>
-							 <a href="#" data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Here is the total amount of money raised by the filtered startups">
+							 <a data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Here is the total amount of money raised by the filtered startups">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							<div class="chart" id="montant-leve"><h1 id="total-leve">€<span class="number-display">_</span> MILLION </h1></div>
 						</div>
 						<div class="row tuile" id="color-6">
 							<div class="chart-title"><h4>F U N D I N G S &nbsp;( € M )</h4></div>
-							 <a href="#" data-toggle="tooltip" style="top : 130px;" class="tooltip" data-placement="bottom" title="Select a time span to filter startups that have raised during that period">
+							 <a data-toggle="tooltip" style="top : 130px;" class="tooltip" data-placement="bottom" title="Select a time span to filter startups that have raised during that period">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							<div id="fundsBarChart" class="chart"></div>
