modif responsive total fundinds

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -314,8 +314,7 @@ a.modal-linkedin {
 h1#total-leve {
 /* 	font-size : 52px; */
 	position : absolute;
-	width : 2000px;
-	overflow:hidden;
+/* 	width : 370px; */
 	margin-left :35px;
 }
 
