--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -180,6 +180,7 @@
 							$("#businessModelPieChart").css("left", Math.round(bt_margin) + "%");
 							$('#FF').css("left", Math.round(ff_margin) + "%");
 							$("h1#total-leve").css("font-size", text_width);
+							$("h1#total-leve").css("width", $(window).width() / 3 - 30);
 							
 							</script>
 				<section class="about" id="about">
