--- a/app/static/css/lib/style-blue.css
+++ b/app/static/css/lib/style-blue.css
@@ -29,7 +29,7 @@ GOOGLE FONT
 GENERAL STYLES
 ============================================================ */
 body {
-font-family: 'Proxima Nova', Helvetica; sans-serif;
+font-family: 'Proxima Nova', Helvetica, Arial;
 color: #fff;
 }
 
@@ -43,7 +43,7 @@ padding-bottom: 60px;
 }
 
 .header {
-font-family: "Proxima Nova", Helvetica;;
+font-family: "Proxima Nova", Helvetica, Arial;
 padding-bottom: 40px;
 text-transform: uppercase;
 }
@@ -122,7 +122,7 @@ color: #073559;
 color: #073559;
 text-shadow: -0.5px 0 white, 0 0.5px white, 0.5px 0 white, 0 -0.5px white;
 font-weight: 900;
-font-family: 'Proxima Nova', Helvetica, sans-serif;
+font-family: 'Proxima Nova', Helvetica, Arial, sans-serif;
 }
 
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
