--- a/app/static/css/lib/style-blue.css
+++ b/app/static/css/lib/style-blue.css
@@ -122,7 +122,7 @@ color: #073559;
 color: #073559;
 text-shadow: -0.5px 0 white, 0 0.5px white, 0.5px 0 white, 0 -0.5px white;
 font-weight: 900;
-font-family: 'Proxima Nova', Helvetica, Arial, sans-serif;
+font-family: 'Proxima Nova', Helvetica, Arial;
 }
 
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
