--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -66,7 +66,6 @@ span#madeinfrance {
 	min-height:65px;
 	color:black;
 	width:100%;
-	padding-left : 20px;
 	padding-bottom : 30px;
 	padding-top : 35px;
 	margin : 0;
@@ -82,7 +81,6 @@ span#madeinfrance {
 	font-family : "Proxima Nova", Helvetica, Arial  ;
 	color:black;
 	width:100%;
-	padding-left : 20px;
 	margin-top : 0px;
 	margin-bottom : 33px;
 	font-size : 60px;
@@ -282,7 +280,7 @@ a.modal-linkedin {
 
 #categoryRowChart .axis text {
 	fill: #A51D0C;
-    font: 18px "Proxima Nova", "Helvetica", Arial, sans-serif;
+    font: 18px "Proxima Nova", "Helvetica", Arial;
 }
 
 #categoryRowChart .grid-line {
@@ -351,6 +349,15 @@ svg#inceptionBarChart {
 	opacity : 0.45;
 }
 
+/* 
+.modal-backdrop {
+	background-color : black;
+}
+
+.modal-backdrop.in {
+	opacity : 0.9;
+}
+ */	
 
 /* FIN DASHBOARD */
  
@@ -401,9 +408,9 @@ h4.FizBack {
 
 .twitter {
 	position : relative;
-	width : 55px;
-	margin-left: 60px;
-	margin-top : -3px;
+	width : 40px;
+	margin-left: 68px;
+	margin-top : 5px;
 }
 
 .jellyfish {
@@ -423,3 +430,184 @@ h4.FizBack {
 }
 
 /* FIN FOOTER */
+
+
+
+
+
+
+/* LOADING IMG */
+
+
+
+.containloader {
+  background: #fff;
+  text-align: center;
+  line-height: 100vh;
+}
+
+.zgroup {
+  position: relative;
+  display: inline-block;
+  line-height: 16px;
+}
+
+.bigSqr {
+  position: relative;
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  overflow: hidden;
+  -webkit-transform-origin: bottom left;
+      -ms-transform-origin: bottom left;
+          transform-origin: bottom left;
+  -webkit-animation: bigSqrShrink 1s linear infinite;
+          animation: bigSqrShrink 1s linear infinite;
+}
+
+.square {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: #073559;
+}
+
+.first {
+  left: 0px;
+  top: 40px;
+}
+
+.second {
+  left: 40px;
+  top: 40px;
+  -webkit-animation: drop2 1s linear infinite;
+          animation: drop2 1s linear infinite;
+}
+
+.third {
+  left: 0px;
+  top: 0px;
+  -webkit-animation: drop3 1s linear infinite;
+          animation: drop3 1s linear infinite;
+}
+
+.fourth {
+  left: 40px;
+  top: 0px;
+  -webkit-animation: drop4 1s linear infinite;
+          animation: drop4 1s linear infinite;
+}
+
+@-webkit-keyframes bigSqrShrink {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  90% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+}
+
+@keyframes bigSqrShrink {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  90% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+}
+@-webkit-keyframes drop2 {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  25% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+@keyframes drop2 {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  25% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+@-webkit-keyframes drop3 {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  50% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+@keyframes drop3 {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  50% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+@-webkit-keyframes drop4 {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  75% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+@keyframes drop4 {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  75% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
