--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -29,6 +29,13 @@ span#madeinfrance {
 	/* top : 51px; */
 }
 
+/* 
+.container-fluid {
+	padding-right : 7px;
+}
+ */
+
+
 /* FIN GENERAL */
 
 
@@ -66,6 +73,7 @@ span#madeinfrance {
 	min-height:65px;
 	color:black;
 	width:100%;
+	padding-left : 20px;
 	padding-bottom : 30px;
 	padding-top : 35px;
 	margin : 0;
@@ -439,6 +447,7 @@ h4.FizBack {
 /* LOADING IMG */
 
 
+/* 
 
 .containloader {
   background: #fff;
@@ -611,3 +620,4 @@ h4.FizBack {
             transform: translate(0);
   }
 }
+ */
