--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,7 @@
       type="image/png" 
       href="http://i.imgur.com/gxslvVD.png">
       
+<!-- 
     <script>
     	$(window).ready(function() {
     	
@@ -46,6 +47,7 @@
 	});
 		
     </script>
+ -->
       
 
   </head>
@@ -54,6 +56,7 @@
   
   
   
+<!-- 
    <div class="containloader"> 
 <div class="zgroup"> 
   <div class="bigSqr">
@@ -64,7 +67,7 @@
   </div>
 </div>
 </div>
-  
+ -->
   
 
    	  <nav class="navbar navbar-inverse navbar-fixed-top" id="menu-section" >
@@ -161,7 +164,7 @@
 					<div class="row" id="logo-table">
 						<div class="span12" id="table_logos"></div>
 						
-						    <div class="modal fade" data-backdrop="true" id="myModal" role="dialog">
+						    <div class="modal fade" id="myModal" role="dialog">
     							<div class="modal-dialog">
     
 							  		<div class="modal-content">
@@ -199,16 +202,16 @@
 					  </div>
 				</section>
 							<script>
-							if ($(window).width() > 1270) { var text_width = "52px" ; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ;  var div_width = $(window).width() / 3 - 30 }
-							else if ($(window).width() > 1140) { var text_width = "47px"; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; var div_width = $(window).width() / 3 - 30 }
-							else if ($(window).width() > 976) { var text_width = "40px"; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; var div_width = $(window).width() / 3 - 30}
-							else if ($(window).width() < 977) { var text_width = "52px"; var bt_margin = 100 * (($(window).width() - 210) / 2) / ($(window).width()) ; var ff_margin = 100 * (($(window).width() - 400) / 2) / ($(window).width() ) ; var div_width = $(window).width() - 30}
+							if ($(window).width() > 1270) { var text_width = "52px" ; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ;  var div_width = $(window).width() / 3 - 35 }
+							else if ($(window).width() > 1140) { var text_width = "47px"; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; var div_width = $(window).width() / 3 - 35 }
+							else if ($(window).width() > 976) { var text_width = "40px"; var bt_margin = 100 * (($(window).width() / 3 - 210) / 2) / ($(window).width() / 3) ; var ff_margin = 100 * (($(window).width() / 3 - 400) / 2) / ($(window).width() / 3) ; var div_width = $(window).width() / 3 - 35}
+							else if ($(window).width() < 977) { var text_width = "52px"; var bt_margin = 100 * (($(window).width() - 210) / 2) / ($(window).width()) ; var ff_margin = 100 * (($(window).width() - 400) / 2) / ($(window).width() ) ; var div_width = $(window).width() - 35}
 							
 							$("#businessModelPieChart").css("left", Math.round(bt_margin) + "%");
 							$('#FF').css("left", Math.round(ff_margin) + "%");
 							$("h1#total-leve").css("font-size", text_width);
 							$("h1#total-leve").css("width", div_width);
-							
+														
 							</script>
 				<section class="about" id="about">
 					<footer>
