--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
 	
  	<link href="/static/css/style.css" rel="stylesheet"/>
  	
-    <title>The French Fintech Index</title>
+    <title>Froggies in Fintech</title>
     
     <link rel="icon" 
       type="image/png" 
@@ -82,7 +82,7 @@
 			  <span class="icon-bar"></span>
 			  </button>
 			  <a class="navbar-brand FrenchFinTech" style="letter-spacing:2px;font-weight:normal" href="#">
-				The French Fintech Index
+				Froggies in Fintech
 			  </a>
 			  </div>
 			  
