--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -103,7 +103,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="row tuile" id="color-1">
-							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H </h4></div>
+							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;F I N T E C H &nbsp;&nbsp;M E M B E R S</h4></div>
 							 <a data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Click on the logo to activate/desactivate the France Fintech filter">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
