--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
 	
  	<link href="/static/css/style.css" rel="stylesheet"/>
  	
-    <title>Froggies in Fintech</title>
+    <title>Frogs in Fintech</title>
     
     <link rel="icon" 
       type="image/png" 
@@ -82,7 +82,7 @@
 			  <span class="icon-bar"></span>
 			  </button>
 			  <a class="navbar-brand FrenchFinTech" style="letter-spacing:2px;font-weight:normal" href="#">
-				Froggies in Fintech
+				Frogs in Fintech
 			  </a>
 			  </div>
 			  
@@ -103,7 +103,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="row tuile" id="color-1">
-							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;F I N T E C H &nbsp;&nbsp;M E M B E R S</h4></div>
+							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;F I N T E C H</h4></div>
 							 <a data-toggle="tooltip" class="tooltip" data-placement="bottom" title="Click on the logo to activate/desactivate the France Fintech filter">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
