--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,6 +68,20 @@
 </div>
 </div>
  -->
+ 
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68207768-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+ 
+ 
+ 
   
 
    	  <nav class="navbar navbar-inverse navbar-fixed-top" id="menu-section" >
