--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -246,7 +246,7 @@
 							    </div>
 							    <div class="col-md-2" style="height:50px;">
 							    	<h4 class="FizBack"> SHARE </h4>
-	  								<a class="FizBack"><img class="twitter" src="/static/image/twitter.png"> </a>
+	  								<img class="twitter" src="/static/image/twitter.png">
 							    </div>
 						</div>
 					</footer>
@@ -263,6 +263,7 @@
     	$('[data-toggle="tooltip"]').tooltip(); 
 	});
 
+	$('.twitter').click(function(){window.open("http://twitter.com/home?status=Welcome to the Frogs in %23Fintech http://frogsinfintech.theassets.co/ by @FizBack @The_Assets")});
    	
    $(".navbar-collapse ul li a[href^='#']").on('click', function(e) {
 
