--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -13,13 +13,8 @@ span#madeinfrance {
 }
 
 .rect {
-	opacity: 0.08;
-	border: 2px solid black;
-border-radius: 7px;
--webkit-border-radius: 7px;
--moz-border-radius: 7px;
-
-/* transition : all 1s; */
+	opacity: 0;
+/* transition : 1s; */
 }
 
 .rect:hover {
