--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -110,7 +110,7 @@
 			  </div>
 		  </div>
 	</nav>
-	<div class="container-fluid">
+	<div class="container-fluid">C
 		  <div id="corps">
 		  		<section id = "filter">
 				<div class="row">
@@ -127,7 +127,7 @@
 						</div>
 						<div class="row tuile" id="color-2">
 							 <div class="chart-title"><h4>C R E A T I O N S</h4></div>
-							 <a data-toggle="tooltip" style="top : 155px;" class="tooltip" data-placement="bottom" title="Select a time span to filter startups created during this period only">
+							 <a data-toggle="tooltip" style="top : 155px;" class="tooltip" data-placement="bottom" title="Click on the chart to select a time span and filter startups created during this period only">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							 <div id="inceptionBarChart" class="chart"></div>
@@ -167,7 +167,7 @@
 						</div>
 						<div class="row tuile" id="color-6">
 							<div class="chart-title"><h4>F U N D I N G S &nbsp;( € M )</h4></div>
-							 <a data-toggle="tooltip" style="top : 130px;" class="tooltip" data-placement="bottom" title="Select a time span to filter startups that raised during this period">
+							 <a data-toggle="tooltip" style="top : 130px;" class="tooltip" data-placement="bottom" title="Click on the chart to select a time span and filter startups that raised during this period">
     							<img class="info-logo" src="/static/image/info.png" />
 							 </a>
 							<div id="fundsBarChart" class="chart"></div>
