--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -266,7 +266,7 @@
     	$('[data-toggle="tooltip"]').tooltip(); 
 	});
 
-	$('.twitter').click(function(){window.open("http://twitter.com/home?status=Welcome to the Frogs in %23Fintech http://frogsinfintech.theassets.co/ by @FizBack @The_Assets")});
+	$('.twitter').click(function(){window.open("http://twitter.com/home?status=Who let the frogs out%3F %23Fintech http://frogsinfintech.theassets.co/ by @FizBack @The_Assets")});
    	
    $(".navbar-collapse ul li a[href^='#']").on('click', function(e) {
 
