--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
 <html>
   <head>
   	<meta charset="utf-8" />
+  	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="Le club FinTech France" />
     <meta name="author" content="Samuel Fillon" />
@@ -257,9 +258,9 @@
    	<script>
    	
    	if(width < 992) { $(".seealso").css("display", "none")
-   	$(".seealso").css("padding-left","0");
+//    	$(".seealso").css("padding-left","0");
   	$(".twitter").css("margin-left","0");
-//   	$(".jellyfish").css("margin-left","0");
+  	$(".jellyfish").css("margin-left","0");
    	}
    	
 	$(document).ready(function(){
