--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -236,8 +236,12 @@
 				<section class="about" id="about">
 					<footer>
 						<div class="row" id="footer">
-							    <div class="col-md-8 col-xs-8" style="height:50px;">
+							    <div class="col-md-6 col-xs-6" style="height:50px;">
 	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;for&nbsp;<a style="color:black;text-decoration:underline" href="https://www.twitter.com/the_assets">The Assets</a> </h4>
+							    </div>
+							    <div class="col-md-2 col-xs-2" style="height:50px;">
+							        <h4 class="FizBack seealso"> ANALYSIS </h4>
+	  								<a class="FizBack" href="https://medium.com/@RebMelMen/who-let-the-frogs-out-4e01bb871bef#.uclqx32bp"> <img class="medium" src="/static/image/medium.png"> </a>
 							    </div>
 							    <div class="col-md-2 col-xs-2" style="height:50px;">
 							        <h4 class="FizBack seealso"> SEE ALSO </h4>
@@ -262,6 +266,7 @@
 //    	$(".seealso").css("padding-left","0");
   	$(".twitter").css("margin-left","0");
   	$(".jellyfish").css("margin-left","0");
+  	$(".medium").css("margin-left","20px");
    	}
    	
 	$(document).ready(function(){
