--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
     
     <link rel="icon" 
       type="image/png" 
-      href="http://i.imgur.com/gxslvVD.png">
+      href="/static/image/logo_theassets.png">
       
 <!-- 
     <script>
@@ -236,20 +236,19 @@
 				<section class="about" id="about">
 					<footer>
 						<div class="row" id="footer">
-							    <div class="col-md-8 col-xs-8" style="height:50px;">
+							    <div class="col-md-6 col-xs-6" style="height:50px;">
 	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;for&nbsp;<a style="color:black;text-decoration:underline" href="https://www.twitter.com/the_assets">The Assets</a> </h4>
 							    </div>
-<!-- 
 							    <div class="col-md-2 col-xs-2">
 							        <h4 class="FizBack seealso"> ANALYSIS </h4>
-	  								<a class="FizBack" href="https://medium.com/@RebMelMen/who-let-the-frogs-out-4e01bb871bef#.uclqx32bp"> <img class="medium" src="/static/image/medium.png"> </a>
+	  								<a class="FizBack" href="https://medium.com/@RebMelMen/who-let-the-frogs-out-4e01bb871bef"> <img class="medium" src="/static/image/medium.png"> </a>
 							    </div>
- -->
-							    <div class="col-md-2 col-xs-2" style="height:50px;">
+
+							    <div class="col-md-2 col-xs-2">
 							        <h4 class="FizBack seealso"> SEE ALSO </h4>
 	  								<a class="FizBack" href="http://thefintechjellyfish.theassets.co"> <img class="jellyfish" src="https://d30y9cdsu7xlg0.cloudfront.net/png/5356-200.png"> </a>
 							    </div>
-							    <div class="col-md-2 col-xs-2" style="height:50px;">
+							    <div class="col-md-2 col-xs-2">
 							    	<h4 class="FizBack seealso"> SHARE </h4>
 	  								<img class="twitter" src="/static/image/twitter.png">
 							    </div>
